--- a/index.html
+++ b/index.html
@@ -39,7 +39,36 @@
     <div class="container">
         <h1><?php echo $translations[$lang]['title']; ?></h1>
         <form action="process.php" method="POST" class="contact-form">
-            <div class="form-group">
+            <!DOCTYPE html>
+            <html lang="en">
+            <head>
+                <meta charset="UTF-8">
+                <meta name="viewport" content="width=device-width, initial-scale=1.0">
+                <title>Contact Form</title>
+                <link rel="stylesheet" href="style.css">
+            </head>
+            <body>
+                <div class="container">
+                    <h1>Contact Us</h1>
+                    <form action="process.php" method="POST" class="contact-form">
+                        <div class="form-group">
+                            <label for="name">Name</label>
+                            <input type="text" id="name" name="name" placeholder="Enter your name" required>
+                        </div>
+                        <div class="form-group">
+                            <label for="email">Email</label>
+                            <input type="email" id="email" name="email" placeholder="Enter your email" required>
+                        </div>
+                        <div class="form-group">
+                            <label for="message">Message</label>
+                            <textarea id="message" name="message" placeholder="Enter your message" required></textarea>
+                        </div>
+                        <button type="submit">Send</button>
+                    </form>
+                </div>
+            </body>
+            </html>
+                 <div class="form-group">
                 <label for="name"><?php echo $translations[$lang]['name']; ?></label>
                 <input type="text" id="name" name="name" placeholder="<?php echo $translations[$lang]['name_placeholder']; ?>" required>
             </div>
