--- a/index.html
+++ b/index.html
@@ -3,27 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Contact Form</title>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
-        <h1>Contact Us</h1>
-        <form action="process.php" method="POST" class="contact-form">
-            <div class="form-group">
+        <div class="form-container">
+            <h2>Contact Us</h2>
+            <form id="contact-form" action="process.php" method="POST">
                 <label for="name">Name</label>
-                <input type="text" id="name" name="name" placeholder="Enter your name" required>
-            </div>
-            <div class="form-group">
+                <input type="text" id="name" name="name" required>
+
                 <label for="email">Email</label>
-                <input type="email" id="email" name="email" placeholder="Enter your email" required>
-            </div>
-            <div class="form-group">
+                <input type="email" id="email" name="email" required>
+
                 <label for="message">Message</label>
-                <textarea id="message" name="message" placeholder="Enter your message" required></textarea>
-            </div>
-            <button type="submit">Send</button>
-        </form>
+                <textarea id="message" name="message" required></textarea>
+
+                <button type="submit">Send Message</button>
+            </form>
+        </div>
     </div>
 </body>
 </html>
