--- a/index.html
+++ b/index.html
@@ -26,5 +26,14 @@
             </form>
         </div>
     </div>
+    <div id="sidebar">
+        <button id="theme-toggle">Dark Mode</button>
+        <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Contact</a></li>
+            <li><a href="#">Services</a></li>
+        </ul>
+    </div>    
 </body>
 </html>
