--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </div>
     <script src="https://cdn.emailjs.com/dist/email.min.js"></script>
 <script>
-    emailjs.init('template_vabzmf6'); // Замени YOUR_USER_ID на свой User ID из EmailJS (можно найти в Dashboard)
+    emailjs.init('nzxxs_Sm8ZRNAwEu9'); // Замени YOUR_USER_ID на свой User ID из EmailJS (можно найти в Dashboard)
 </script>
 <script>
     document.getElementById('contact-form').addEventListener('submit', function (e) {
