--- a/index.html
+++ b/index.html
@@ -3,31 +3,36 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Contact Form</title>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="container">
-        <div class="form-container">
-            <h2>Contact Us</h2>
-            <form id="contact-form" action="process.php" method="POST">
-                <label for="name">Name</label>
-                <input type="text" id="name" name="name" required>
+    <div class="background-image">
+        <div class="container">
+            <header>
+                <h1>Contact Us</h1>
+            </header>
+            
+            <main>
+                <form action="#" method="POST" class="contact-form">
+                    <label for="name">Your Name</label>
+                    <input type="text" id="name" name="name" placeholder="Enter your name" required>
 
-                <label for="email">Email</label>
-                <input type="email" id="email" name="email" required>
+                    <label for="email">Your Email</label>
+                    <input type="email" id="email" name="email" placeholder="Enter your email" required>
 
-                <label for="message">Message</label>
-                <textarea id="message" name="message" required></textarea>
+                    <label for="message">Your Message</label>
+                    <textarea id="message" name="message" placeholder="Write your message" required></textarea>
 
-                <button type="submit">Send Message</button>
-            </form>
+                    <button type="submit" class="submit-btn">Send Message</button>
+                </form>
+            </main>
+
+            <footer>
+                <p>&copy; 2024 Optimus gang</p>
+            </footer>
         </div>
     </div>
-    <script src="https://cdn.emailjs.com/dist/email.min.js"></script>
-<script></script>
-
 </body>
 </html>
