--- a/index.html
+++ b/index.html
@@ -3,36 +3,35 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact Form</title>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Contact Us</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="background-image">
-        <div class="container">
-            <header>
-                <h1>Contact Us</h1>
-            </header>
-            
-            <main>
-                <form action="#" method="POST" class="contact-form">
-                    <label for="name">Your Name</label>
-                    <input type="text" id="name" name="name" placeholder="Enter your name" required>
 
-                    <label for="email">Your Email</label>
-                    <input type="email" id="email" name="email" placeholder="Enter your email" required>
+    <div class="container">
+        <header>
+            <h1>Contact Us</h1>
+            <p>We'd love to hear from you! Please fill out the form below.</p>
+        </header>
 
-                    <label for="message">Your Message</label>
-                    <textarea id="message" name="message" placeholder="Write your message" required></textarea>
+        <form action="submit.php" method="POST" class="contact-form">
+            <label for="name">Name</label>
+            <input type="text" id="name" name="name" required>
 
-                    <button type="submit" class="submit-btn">Send Message</button>
-                </form>
-            </main>
+            <label for="email">Email</label>
+            <input type="email" id="email" name="email" required>
 
-            <footer>
-                <p>&copy; 2024 Optimus gang</p>
-            </footer>
-        </div>
+            <label for="message">Message</label>
+            <textarea id="message" name="message" rows="5" required></textarea>
+
+            <button type="submit" class="submit-btn">Send Message</button>
+        </form>
     </div>
+
+    <footer>
+        <p>&copy; 2024 Your Company. All rights reserved.</p>
+    </footer>
+
 </body>
 </html>
