--- a/index.html
+++ b/index.html
@@ -6,13 +6,14 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Contact Us</title>
     <link rel="stylesheet" href="styles.css">
+    <script src="script.js" defer></script>
 </head>
 <body>
 
     <div class="container">
         <header>
             <h1>Contact Us</h1>
-            <p>We'd love to hear from you! Please fill out the form below.</p>
+            <p>We would love to hear from you! Please fill out the form below.</p>
         </header>
 
         <form action="submit.php" method="POST" class="contact-form">
