--- a/index.html
+++ b/index.html
@@ -12,30 +12,32 @@
 </head>
 <body>
 
-    <div class="container">
-        <header>
-            <h1>Contact Us</h1>
-            <p>We would love to hear from you! Please fill out the form below.</p>
-        </header>
+    <div class="background">
+        <div class="container">
+            <header>
+                <h1>Contact Us</h1>
+                <p>We would love to hear from you! Please fill out the form below.</p>
+            </header>
 
-        <form action="submit.php" method="POST" class="contact-form">
-            <div class="form-group">
-                <label for="name"><i class="fas fa-user"></i> Name</label>
-                <input type="text" id="name" name="name" required>
-            </div>
+            <form action="submit.php" method="POST" class="contact-form">
+                <div class="form-group">
+                    <label for="name"><i class="fas fa-user"></i> Name</label>
+                    <input type="text" id="name" name="name" required>
+                </div>
 
-            <div class="form-group">
-                <label for="email"><i class="fas fa-envelope"></i> Email</label>
-                <input type="email" id="email" name="email" required>
-            </div>
+                <div class="form-group">
+                    <label for="email"><i class="fas fa-envelope"></i> Email</label>
+                    <input type="email" id="email" name="email" required>
+                </div>
 
-            <div class="form-group">
-                <label for="message"><i class="fas fa-comment"></i> Message</label>
-                <textarea id="message" name="message" rows="5" required></textarea>
-            </div>
+                <div class="form-group">
+                    <label for="message"><i class="fas fa-comment"></i> Message</label>
+                    <textarea id="message" name="message" rows="5" required></textarea>
+                </div>
 
-            <button type="submit" class="submit-btn">Send Message</button>
-        </form>
+                <button type="submit" class="submit-btn">Send Message</button>
+            </form>
+        </div>
     </div>
 
     <footer>
