--- a/index.html
+++ b/index.html
@@ -5,44 +5,35 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Contact Us</title>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
-    <script src="script.js" defer></script>
-    <!-- Font Awesome for icons -->
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
 </head>
 <body>
-
-    <div class="background">
-        <div class="container">
-            <header>
-                <h1>Contact Us</h1>
-                <p>We would love to hear from you! Please fill out the form below.</p>
-            </header>
-
-            <form action="submit.php" method="POST" class="contact-form">
+    <div class="container">
+        <header>
+            <h1>Contact Us</h1>
+        </header>
+        <main>
+            <form action="send.php" method="POST" class="contact-form">
                 <div class="form-group">
-                    <label for="name"><i class="fas fa-user"></i> Name</label>
+                    <label for="name">Name</label>
                     <input type="text" id="name" name="name" required>
                 </div>
-
                 <div class="form-group">
-                    <label for="email"><i class="fas fa-envelope"></i> Email</label>
+                    <label for="email">Email</label>
                     <input type="email" id="email" name="email" required>
                 </div>
-
                 <div class="form-group">
-                    <label for="message"><i class="fas fa-comment"></i> Message</label>
-                    <textarea id="message" name="message" rows="5" required></textarea>
+                    <label for="message">Message</label>
+                    <textarea id="message" name="message" required></textarea>
                 </div>
-
                 <button type="submit" class="submit-btn">Send Message</button>
             </form>
-        </div>
+        </main>
     </div>
-
     <footer>
-        <p>&copy; 2024 Your Company. All rights reserved.</p>
+        <p>&copy; 2024 Your Company</p>
     </footer>
-
+    <script src="script.js"></script>
 </body>
 </html>
