--- a/index.html
+++ b/index.html
@@ -12,20 +12,21 @@
     <div class="container">
         <header>
             <h1>Contact Us</h1>
+            <p>We are here to help. Fill out the form and we will get back to you shortly.</p>
         </header>
         <main>
             <form action="send.php" method="POST" class="contact-form">
                 <div class="form-group">
-                    <label for="name">Name</label>
-                    <input type="text" id="name" name="name" required>
+                    <label for="name">Your Name</label>
+                    <input type="text" id="name" name="name" required placeholder="Enter your name">
                 </div>
                 <div class="form-group">
-                    <label for="email">Email</label>
-                    <input type="email" id="email" name="email" required>
+                    <label for="email">Your Email</label>
+                    <input type="email" id="email" name="email" required placeholder="Enter your email">
                 </div>
                 <div class="form-group">
-                    <label for="message">Message</label>
-                    <textarea id="message" name="message" required></textarea>
+                    <label for="message">Your Message</label>
+                    <textarea id="message" name="message" required placeholder="Enter your message"></textarea>
                 </div>
                 <button type="submit" class="submit-btn">Send Message</button>
             </form>
